--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -32,6 +32,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/rating/index">Ratings List</a>
           </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="#">Dashboard</a>
+          </li>
         </ul>
        
       </div>
