--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -17,20 +17,24 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">CRM</a>
+            <a class="navbar-brand" href="/">CRM</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/customer/index">Customers List</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/rating/index">Ratings List</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/complaint/index">Complaints List</a>
           </li>
 
           <li class="nav-item">
